--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-connect": "^1.0.0",
     "nodemailer": "^6.9.4",
     "react": "18.2.0",
+    "react-awesome-lightbox": "^1.8.1",
     "react-bootstrap": "^1.6.1",
     "react-circular-progressbar": "^2.1.0",
     "react-countup": "^6.4.2",
