--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^4.10.1",
     "react-nice-select": "^1.0.4",
     "react-player": "^2.12.0",
+    "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
     "react-vertical-timeline-component": "^3.6.0",
     "react-visibility-sensor": "^5.1.1",
