--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ NEXT_PUBLIC_CONTENTFUL_ACCESS_KEY="3W692CSWyCQdbDrjW-Z_kwhpWk5JuBscSLRkluMTLXk"
 
 # EMAIL
 NEXT_PUBLIC_EMAIL_HOST="smtp.gmail.com"
-NEXT_PUBLIC_EMAIL_SENDER_EMAIL="usama.irfan9790@gmail.com"
-NEXT_PUBLIC_EMAIL_SENDER_REPLY_TO="usama.irfan9790@gmail.com"
-NEXT_PUBLIC_EMAIL_SEND_TO="usama.irfan9791@gmail.com"
+NEXT_PUBLIC_EMAIL_SENDER_EMAIL="smsidrees@gmail.com"
+NEXT_PUBLIC_EMAIL_SENDER_REPLY_TO="smsidrees@gmail.com"
+NEXT_PUBLIC_EMAIL_SEND_TO="smsidrees@gmail.com"
 NEXT_PUBLIC_EMAIL_SENDER_PASSWORD="dbslnwgrhqxbsroa"
