--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ NEXT_PUBLIC_CONTENTFUL_SPACE_ID="pbbsv189y80l"
 NEXT_PUBLIC_CONTENTFUL_ACCESS_KEY="3W692CSWyCQdbDrjW-Z_kwhpWk5JuBscSLRkluMTLXk"
 
 # EMAIL
-NEXT_PUBLIC_EMAIL_HOST="smtp.gmail.com"
-NEXT_PUBLIC_EMAIL_SENDER_EMAIL="smsidrees@gmail.com"
-NEXT_PUBLIC_EMAIL_SENDER_REPLY_TO="smsidrees@gmail.com"
+NEXT_PUBLIC_EMAIL_HOST="yahoo"
+NEXT_PUBLIC_EMAIL_SENDER_EMAIL="ssidrees@yahoo.com"
+NEXT_PUBLIC_EMAIL_SENDER_REPLY_TO="ssidrees@yahoo.com"
 NEXT_PUBLIC_EMAIL_SEND_TO="smsidrees@gmail.com"
 NEXT_PUBLIC_EMAIL_SENDER_PASSWORD="dbslnwgrhqxbsroa"
